before css changes

--- a/react-vite/index.html
+++ b/react-vite/index.html
@@ -2,9 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <meta
+      name="description"
+      content="PodMatcher – Connect podcast hosts & guests seamlessly"
+    />
+    <title>PodMatcher</title>
+    <!-- swap in your real logo.svg in src/assets -->
+    <link
+      rel="icon"
+      href="/src/assets/logo.svg"
+      type="image/svg+xml"
+    />
   </head>
   <body>
     <div id="root"></div>
