--- a/react-vite/index.html
+++ b/react-vite/index.html
@@ -17,6 +17,14 @@
       href="/src/assets/logo.svg"
       type="image/svg+xml"
     />
+
+    <!-- ─── Google Font: Poppins ─── -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
